--- a/modules/custom/hello/composer.json
+++ b/modules/custom/hello/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "drupal/hello",
   "type": "drupal-module",
-  "description": "My Awesome Module",
+  "description": "kader new module",
   "keywords": ["Drupal"],
   "license": "GPL-2.0+",
   "homepage": "https://www.drupal.org/project/hello",
